feat: update lipophilicity meta bibtex setup #6

--- a/data/lipophilicity/example_processing_and_templates.ipynb
+++ b/data/lipophilicity/example_processing_and_templates.ipynb
@@ -901,7 +901,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 71,
    "id": "8368bb20-8e1c-4b7d-b0e2-b39da36b5972",
    "metadata": {
     "tags": []
@@ -923,17 +923,18 @@
     "\n",
     "\n",
     "def get_and_transform_data():\n",
-    "    \n",
     "    # get raw data\n",
-    "    data_path = \"https://deepchemdata.s3-us-west-1.amazonaws.com/datasets/Lipophilicity.csv\"\n",
+    "    data_path = (\n",
+    "        \"https://deepchemdata.s3-us-west-1.amazonaws.com/datasets/Lipophilicity.csv\"\n",
+    "    )\n",
     "    fn_data_original = \"data_original.txt\"\n",
     "    data = requests.get(data_path)\n",
     "    with open(fn_data_original, \"wb\") as f:\n",
     "        f.write(data.content)\n",
-    "        \n",
+    "\n",
     "    # create dataframe\n",
     "    df = pd.read_csv(fn_data_original, delimiter=\",\")\n",
-    "    \n",
+    "\n",
     "    # check if fields are the same\n",
     "    assert df.columns.tolist() == [\"CMPD_CHEMBLID\", \"exp\", \"smiles\"]\n",
     "    \n",
@@ -986,11 +987,13 @@
     "        ],\n",
     "        \"num_points\": len(df),  # number of datapoints in this dataset\n",
     "        \"url\": \"https://deepchemdata.s3-us-west-1.amazonaws.com/datasets/Lipophilicity.csv\",\n",
-    "        \"bibtex\": [\"\"\"@techreport{hersey2015chembl,\n",
-    "        title={ChEMBL Deposited Data Set-AZ\\_dataset},\n",
-    "        author={Hersey, Anne},\n",
-    "        year={2015},\n",
-    "        institution={Technical Report, Technical report, EMBL-EBI, 2015. https://www. ebi. ac. uk~…}}\"\"\"],\n",
+    "        \"bibtex\": [\n",
+    "            \"\"\"@techreport{hersey2015chembl,\n",
+    "            title={ChEMBL Deposited Data Set-AZ\\_dataset},\n",
+    "            author={Hersey, Anne},\n",
+    "            year={2015},\n",
+    "            institution={Technical Report, Technical report, EMBL-EBI, 2015. https://www. ebi. ac. uk~…}}\"\"\"\n",
+    "        ],\n",
     "    }\n",
     "    fn_meta = \"meta.yaml\"\n",
     "    with open(fn_meta, \"w\") as f:\n",
@@ -1005,7 +1008,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 69,
    "id": "d0474f26-70f3-4655-b81a-df4ada90e7a6",
    "metadata": {
     "tags": []
