feat: update lipophilicity meta bibtex setup #7

--- a/data/lipophilicity/example_processing_and_templates.ipynb
+++ b/data/lipophilicity/example_processing_and_templates.ipynb
@@ -150,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 80,
    "id": "28096592-ed31-4fa1-b400-3a48e6a84ec1",
    "metadata": {
     "tags": []
@@ -159,10 +159,10 @@
     {
      "data": {
       "text/plain": [
-       "['CMPD_CHEMBLID', 'exp', 'smiles']"
+       "['CMPD_CHEMBLID', 'exp', 'SMILES']"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 80,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -173,14 +173,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "61efe8bb-7505-4d63-936f-94e3deecf29a",
    "metadata": {
     "tags": []
    },
    "outputs": [],
    "source": [
-    "assert df.columns.tolist() == ['CMPD_CHEMBLID', 'exp', 'smiles']"
+    "assert df.columns.tolist() == [\"CMPD_CHEMBLID\", \"exp\", \"smiles\"]"
    ]
   },
   {
@@ -458,7 +458,7 @@
    },
    "outputs": [],
    "source": [
-    "assert not(df.duplicated().sum())"
+    "assert not df.duplicated().sum()"
    ]
   },
   {
@@ -745,7 +745,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 82,
    "id": "d3890961-444e-4a26-b8fc-ed8c4e959af9",
    "metadata": {
     "tags": []
@@ -785,17 +785,19 @@
     "    ],\n",
     "    \"num_points\": len(df),  # number of datapoints in this dataset\n",
     "    \"url\": \"https://deepchemdata.s3-us-west-1.amazonaws.com/datasets/Lipophilicity.csv\",\n",
-    "    \"bibtex\": [\"\"\"@techreport{hersey2015chembl,\n",
-    "    title={ChEMBL Deposited Data Set-AZ\\_dataset},\n",
-    "    author={Hersey, Anne},\n",
-    "    year={2015},\n",
-    "    institution={Technical Report, Technical report, EMBL-EBI, 2015. https://www. ebi. ac. uk~…}}\"\"\"],\n",
+    "    \"bibtex\": [\n",
+    "        \"\"\"@techreport{hersey2015chembl,\n",
+    "        title={ChEMBL Deposited Data Set-AZ\\_dataset},\n",
+    "        author={Hersey, Anne},\n",
+    "        year={2015},\n",
+    "        institution={Technical Report, Technical report, EMBL-EBI, 2015. https://www. ebi. ac. uk~…}}\"\"\"\n",
+    "    ],\n",
     "}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 83,
    "id": "580bbd79-4845-4515-be94-3e4a9815d048",
    "metadata": {
     "tags": []
@@ -807,7 +809,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 84,
    "id": "873fa5dd-9b60-40f5-b537-4d7a206414ea",
    "metadata": {
     "tags": []
@@ -832,7 +834,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 85,
    "id": "ef6063c5-7a8b-4344-bccf-a073443feebf",
    "metadata": {
     "tags": []
@@ -869,9 +871,9 @@
       "num_points: 4200\n",
       "url: https://deepchemdata.s3-us-west-1.amazonaws.com/datasets/Lipophilicity.csv\n",
       "bibtex:\n",
-      "- \"@techreport{hersey2015chembl,\\n    title={ChEMBL Deposited Data Set-AZ\\\\_dataset},\\n\\\n",
-      "  \\    author={Hersey, Anne},\\n    year={2015},\\n    institution={Technical Report,\\\n",
-      "  \\ Technical report, EMBL-EBI, 2015. https://www. ebi. ac. uk~\\u2026}}\"\n"
+      "- \"@techreport{hersey2015chembl,\\n        title={ChEMBL Deposited Data Set-AZ\\\\_dataset},\\n\\\n",
+      "  \\        author={Hersey, Anne},\\n        year={2015},\\n        institution={Technical\\\n",
+      "  \\ Report, Technical report, EMBL-EBI, 2015. https://www. ebi. ac. uk~\\u2026}}\"\n"
      ]
     }
    ],
@@ -889,7 +891,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 86,
    "id": "9aab00fd-58a8-40b0-be30-1e269e0d323b",
    "metadata": {
     "tags": []
@@ -901,7 +903,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 87,
    "id": "8368bb20-8e1c-4b7d-b0e2-b39da36b5972",
    "metadata": {
     "tags": []
@@ -937,10 +939,10 @@
     "\n",
     "    # check if fields are the same\n",
     "    assert df.columns.tolist() == [\"CMPD_CHEMBLID\", \"exp\", \"smiles\"]\n",
-    "    \n",
+    "\n",
     "    # check if no duplicated\n",
-    "    assert not(df.duplicated().sum())\n",
-    "    \n",
+    "    assert not df.duplicated().sum()\n",
+    "\n",
     "    # overwrite column names = fields\n",
     "    fields_clean = [\n",
     "        \"CMPD_CHEMBLID\",\n",
@@ -948,11 +950,11 @@
     "        \"SMILES\",\n",
     "    ]\n",
     "    df.columns = fields_clean\n",
-    "    \n",
+    "\n",
     "    # save to csv\n",
     "    fn_data_csv = \"data_clean.csv\"\n",
     "    df.to_csv(fn_data_csv, index=False)\n",
-    "    \n",
+    "\n",
     "    # create meta yaml\n",
     "    meta = {\n",
     "        \"name\": \"lipophilicity\",  # unique identifier, we will also use this for directory names\n",
@@ -998,17 +1000,17 @@
     "    fn_meta = \"meta.yaml\"\n",
     "    with open(fn_meta, \"w\") as f:\n",
     "        yaml.dump(meta, f, sort_keys=False)\n",
-    "        \n",
+    "\n",
     "    print(f\"Finished processing {meta['name']} dataset!\")\n",
     "\n",
     "\n",
-    "if __name__ == '__main__':\n",
+    "if __name__ == \"__main__\":\n",
     "    get_and_transform_data()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 88,
    "id": "d0474f26-70f3-4655-b81a-df4ada90e7a6",
    "metadata": {
     "tags": []
@@ -1035,7 +1037,7 @@
    },
    "outputs": [],
    "source": [
-    "ls -lh"
+    "ls -lh  # fmt: skip"
    ]
   },
   {
