feat: update lipophilicity meta bibtex setup #9

--- a/data/lipophilicity/example_processing_and_templates.ipynb
+++ b/data/lipophilicity/example_processing_and_templates.ipynb
@@ -758,7 +758,7 @@
     "    \"targets\": [\n",
     "        {\n",
     "            \"id\": \"exp\",  # name of the column in a tabular dataset\n",
-    "            \"description\": \"experimental results of octanol/water distribution coefficient (logD at pH 7.4)\",  # description of what this column means\n",
+    "            \"description\": \"experimental results of octanol/water distribution coefficient (logD at pH 7.4)\",\n",
     "            \"units\": \"logD\",  # units of the values in this column (leave empty if unitless)\n",
     "            \"type\": \"continuous\",  # can be \"categorical\", \"ordinal\", \"continuous\"\n",
     "            \"names\": [  # names for the property (to sample from for building the prompts)\n",
@@ -787,7 +787,7 @@
     "    \"url\": \"https://deepchemdata.s3-us-west-1.amazonaws.com/datasets/Lipophilicity.csv\",\n",
     "    \"bibtex\": [\n",
     "        \"\"\"@techreport{hersey2015chembl,\n",
-    "        title={ChEMBL Deposited Data Set-AZ\\_dataset},\n",
+    "        title={ChEMBL Deposited Data Set-AZ dataset},\n",
     "        author={Hersey, Anne},\n",
     "        year={2015},\n",
     "        institution={Technical Report, Technical report, EMBL-EBI, 2015. https://www. ebi. ac. uk~…}}\"\"\"\n",
@@ -891,7 +891,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 89,
    "id": "9aab00fd-58a8-40b0-be30-1e269e0d323b",
    "metadata": {
     "tags": []
@@ -903,7 +903,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 90,
    "id": "8368bb20-8e1c-4b7d-b0e2-b39da36b5972",
    "metadata": {
     "tags": []
@@ -962,7 +962,7 @@
     "        \"targets\": [\n",
     "            {\n",
     "                \"id\": \"exp\",  # name of the column in a tabular dataset\n",
-    "                \"description\": \"experimental results of octanol/water distribution coefficient (logD at pH 7.4)\",  # description of what this column means\n",
+    "                \"description\": \"experimental results of octanol/water distribution coefficient (logD at pH 7.4)\",\n",
     "                \"units\": \"logD\",  # units of the values in this column (leave empty if unitless)\n",
     "                \"type\": \"continuous\",  # can be \"categorical\", \"ordinal\", \"continuous\"\n",
     "                \"names\": [  # names for the property (to sample from for building the prompts)\n",
@@ -991,7 +991,7 @@
     "        \"url\": \"https://deepchemdata.s3-us-west-1.amazonaws.com/datasets/Lipophilicity.csv\",\n",
     "        \"bibtex\": [\n",
     "            \"\"\"@techreport{hersey2015chembl,\n",
-    "            title={ChEMBL Deposited Data Set-AZ\\_dataset},\n",
+    "            title={ChEMBL Deposited Data Set-AZ dataset},\n",
     "            author={Hersey, Anne},\n",
     "            year={2015},\n",
     "            institution={Technical Report, Technical report, EMBL-EBI, 2015. https://www. ebi. ac. uk~…}}\"\"\"\n",
@@ -1010,7 +1010,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 91,
    "id": "d0474f26-70f3-4655-b81a-df4ada90e7a6",
    "metadata": {
     "tags": []
