feat: update notebook #3

--- a/data/freesolv/example_processing_and_templates.ipynb
+++ b/data/freesolv/example_processing_and_templates.ipynb
@@ -1041,7 +1041,7 @@
     "            \"description\": \"experimental hydration free energy value\",  # description of what this column means\n",
     "            \"units\": \"kcal/mol\",  # units of the values in this column (leave empty if unitless)\n",
     "            \"type\": \"continuous\",  # can be \"categorical\", \"ordinal\", \"continuous\"\n",
-    "            \"names\": [  #  names for the property (to sample from for building the prompts)\n",
+    "            \"names\": [  # names for the property (to sample from for building the prompts)\n",
     "                \"hydration free energy\",\n",
     "            ],\n",
     "        },\n",
@@ -1049,7 +1049,7 @@
     "            \"id\": \"exp_uncertainty\",\n",
     "            \"description\": \"experimental hydration free energy uncertainty\",\n",
     "            \"units\": \"kcal/mol\",\n",
-    "            \"type\": \"continuos\",\n",
+    "            \"type\": \"continuous\",\n",
     "            \"names\": [\n",
     "                \"hydration free energy uncertainty\",\n",
     "            ],\n",
@@ -1068,7 +1068,7 @@
     "            \"id\": \"calc_uncertainty\",\n",
     "            \"description\": \"mobley group calculated value calculated uncertainty\",\n",
     "            \"units\": \"kcal/mol\",\n",
-    "            \"type\": \"continuos\",\n",
+    "            \"type\": \"continuous\",\n",
     "            \"names\": [\n",
     "                \"GAFF uncertainty\",\n",
     "                \"mobley group calculated value uncertainty\",\n",
@@ -1226,7 +1226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 105,
    "id": "8368bb20-8e1c-4b7d-b0e2-b39da36b5972",
    "metadata": {
     "tags": []
@@ -1292,8 +1292,8 @@
     "\n",
     "    # data cleaning\n",
     "    df.notes = (\n",
-    "        df.notes.str.strip()  # remove leading and trailing white space characters\n",
-    "    )\n",
+    "        df.notes.str.strip()\n",
+    "    )  # remove leading and trailing white space characters\n",
     "\n",
     "    # save to csv\n",
     "    fn_data_csv = \"data_clean.csv\"\n",
@@ -1309,7 +1309,7 @@
     "                \"description\": \"experimental hydration free energy value\",  # description of what this column means\n",
     "                \"units\": \"kcal/mol\",  # units of the values in this column (leave empty if unitless)\n",
     "                \"type\": \"continuous\",  # can be \"categorical\", \"ordinal\", \"continuous\"\n",
-    "                \"names\": [  #  names for the property (to sample from for building the prompts)\n",
+    "                \"names\": [  # names for the property (to sample from for building the prompts)\n",
     "                    \"hydration free energy\",\n",
     "                ],\n",
     "            },\n",
@@ -1317,7 +1317,7 @@
     "                \"id\": \"exp_uncertainty\",\n",
     "                \"description\": \"experimental hydration free energy uncertainty\",\n",
     "                \"units\": \"kcal/mol\",\n",
-    "                \"type\": \"continuos\",\n",
+    "                \"type\": \"continuous\",\n",
     "                \"names\": [\n",
     "                    \"hydration free energy uncertainty\",\n",
     "                ],\n",
@@ -1336,7 +1336,7 @@
     "                \"id\": \"calc_uncertainty\",\n",
     "                \"description\": \"mobley group calculated value calculated uncertainty\",\n",
     "                \"units\": \"kcal/mol\",\n",
-    "                \"type\": \"continuos\",\n",
+    "                \"type\": \"continuous\",\n",
     "                \"names\": [\n",
     "                    \"GAFF uncertainty\",\n",
     "                    \"mobley group calculated value uncertainty\",\n",
@@ -1382,7 +1382,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 106,
    "id": "d0474f26-70f3-4655-b81a-df4ada90e7a6",
    "metadata": {
     "tags": []
