feat: update freesolv notebook (#31)

--- a/data/freesolv/example_processing_and_templates.ipynb
+++ b/data/freesolv/example_processing_and_templates.ipynb
@@ -33,8 +33,8 @@
    },
    "outputs": [],
    "source": [
-    "import requests\n",
     "import pandas as pd\n",
+    "import requests\n",
     "import yaml"
    ]
   },
@@ -1025,7 +1025,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 98,
    "id": "d3890961-444e-4a26-b8fc-ed8c4e959af9",
    "metadata": {
     "tags": []
@@ -1049,7 +1049,7 @@
     "            \"id\": \"exp_uncertainty\",\n",
     "            \"description\": \"experimental hydration free energy uncertainty\",\n",
     "            \"units\": \"kcal/mol\",\n",
-    "            \"type\": \"continuos\",\n",
+    "            \"type\": \"continuous\",\n",
     "            \"names\": [\n",
     "                \"hydration free energy uncertainty\",\n",
     "            ],\n",
@@ -1068,7 +1068,7 @@
     "            \"id\": \"calc_uncertainty\",\n",
     "            \"description\": \"mobley group calculated value calculated uncertainty\",\n",
     "            \"units\": \"kcal/mol\",\n",
-    "            \"type\": \"continuos\",\n",
+    "            \"type\": \"continuous\",\n",
     "            \"names\": [\n",
     "                \"GAFF uncertainty\",\n",
     "                \"mobley group calculated value uncertainty\",\n",
@@ -1094,11 +1094,12 @@
     "    ],\n",
     "    \"num_points\": len(df),  # number of datapoints in this dataset\n",
     "    \"url\": \"https://github.com/MobleyLab/FreeSolv\",\n",
-    "    \"bibtex\": \"\"\"@article{mobley2013experimental,\n",
-    "title={Experimental and calculated small molecule hydration free energies},\n",
-    "author={Mobley, David L},\n",
-    "year={2013}\n",
-    "\"\"\",\n",
+    "    \"bibtex\": [\n",
+    "        \"\"\"@article{mobley2013experimental,\n",
+    "        title={Experimental and calculated small molecule hydration free energies},\n",
+    "        author={Mobley, David L},\n",
+    "        year={2013}\"\"\",\n",
+    "    ],\n",
     "}"
    ]
   },
@@ -1124,7 +1125,7 @@
    "outputs": [],
    "source": [
     "with open(fn_meta, \"w\") as f:\n",
-    "    yaml.dump(meta, f)"
+    "    yaml.dump(meta, f, sort_keys=False)"
    ]
   },
   {
@@ -1225,7 +1226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 105,
    "id": "8368bb20-8e1c-4b7d-b0e2-b39da36b5972",
    "metadata": {
     "tags": []
@@ -1241,72 +1242,74 @@
    ],
    "source": [
     "%%writefile $path_file\n",
-    "import requests\n",
     "import pandas as pd\n",
+    "import requests\n",
     "import yaml\n",
     "\n",
     "\n",
     "def get_and_transform_data():\n",
-    "    \n",
     "    # get raw data\n",
-    "    data_path = \"https://raw.githubusercontent.com/MobleyLab/FreeSolv/master/database.txt\"\n",
+    "    data_path = (\n",
+    "        \"https://raw.githubusercontent.com/MobleyLab/FreeSolv/master/database.txt\"\n",
+    "    )\n",
     "    fn_data_original = \"data_original.txt\"\n",
     "    data = requests.get(data_path)\n",
     "    with open(fn_data_original, \"wb\") as f:\n",
     "        f.write(data.content)\n",
-    "        \n",
+    "\n",
     "    # create dataframe\n",
     "    df = pd.read_csv(fn_data_original, delimiter=\";\", skiprows=2)\n",
-    "    \n",
+    "\n",
     "    # check if fields are the same\n",
     "    fields_orig = df.columns.tolist()\n",
     "    assert fields_orig == [\n",
-    "        '# compound id (and file prefix)',\n",
-    "        ' SMILES',\n",
-    "        ' iupac name (or alternative if IUPAC is unavailable or not parseable by OEChem)',\n",
-    "        ' experimental value (kcal/mol)',\n",
-    "        ' experimental uncertainty (kcal/mol)',\n",
-    "        ' Mobley group calculated value (GAFF) (kcal/mol)',\n",
-    "        ' calculated uncertainty (kcal/mol)',\n",
-    "        ' experimental reference (original or paper this value was taken from)',\n",
-    "        ' calculated reference',\n",
-    "        ' text notes.'\n",
+    "        \"# compound id (and file prefix)\",\n",
+    "        \" SMILES\",\n",
+    "        \" iupac name (or alternative if IUPAC is unavailable or not parseable by OEChem)\",\n",
+    "        \" experimental value (kcal/mol)\",\n",
+    "        \" experimental uncertainty (kcal/mol)\",\n",
+    "        \" Mobley group calculated value (GAFF) (kcal/mol)\",\n",
+    "        \" calculated uncertainty (kcal/mol)\",\n",
+    "        \" experimental reference (original or paper this value was taken from)\",\n",
+    "        \" calculated reference\",\n",
+    "        \" text notes.\",\n",
     "    ]\n",
-    "    \n",
+    "\n",
     "    # overwrite column names = fields\n",
     "    fields_clean = [\n",
-    "        'compound_id',\n",
-    "        'SMILES',\n",
-    "        'iupac_name',\n",
-    "        'exp_value',\n",
-    "        'exp_uncertainty',\n",
-    "        'GAFF',\n",
-    "        'calc_uncertainty',\n",
-    "        'exp_ref',\n",
-    "        'calc_reference',\n",
-    "        'notes'\n",
+    "        \"compound_id\",\n",
+    "        \"SMILES\",\n",
+    "        \"iupac_name\",\n",
+    "        \"exp_value\",\n",
+    "        \"exp_uncertainty\",\n",
+    "        \"GAFF\",\n",
+    "        \"calc_uncertainty\",\n",
+    "        \"exp_ref\",\n",
+    "        \"calc_reference\",\n",
+    "        \"notes\",\n",
     "    ]\n",
     "    df.columns = fields_clean\n",
-    "    \n",
+    "\n",
     "    # data cleaning\n",
-    "    df.notes = df.notes.str.strip() # remove leading and trailing white space characters\n",
-    "    \n",
+    "    df.notes = (\n",
+    "        df.notes.str.strip()\n",
+    "    )  # remove leading and trailing white space characters\n",
+    "\n",
     "    # save to csv\n",
     "    fn_data_csv = \"data_clean.csv\"\n",
     "    df.to_csv(fn_data_csv, index=False)\n",
-    "    \n",
+    "\n",
     "    # create meta yaml\n",
     "    meta = {\n",
-    "        \"name\": \"freesolv\", # unique identifier, we will also use this for directory names\n",
+    "        \"name\": \"freesolv\",  # unique identifier, we will also use this for directory names\n",
     "        \"description\": \"Experimental and calculated small molecule hydration free energies\",\n",
     "        \"targets\": [\n",
     "            {\n",
-    "                \"id\": \"exp_value\", # name of the column in a tabular dataset\n",
-    "                \"description\": \"experimental hydration free energy value\", # description of what this column means\n",
-    "                \"units\": \"kcal/mol\", # units of the values in this column (leave empty if unitless)\n",
-    "                \"type\": \"continuous\", # can be \"categorical\", \"ordinal\", \"continuous\"\n",
-    "                \"names\": # names for the property (to sample from for building the prompts)\n",
-    "                [\n",
+    "                \"id\": \"exp_value\",  # name of the column in a tabular dataset\n",
+    "                \"description\": \"experimental hydration free energy value\",  # description of what this column means\n",
+    "                \"units\": \"kcal/mol\",  # units of the values in this column (leave empty if unitless)\n",
+    "                \"type\": \"continuous\",  # can be \"categorical\", \"ordinal\", \"continuous\"\n",
+    "                \"names\": [  # names for the property (to sample from for building the prompts)\n",
     "                    \"hydration free energy\",\n",
     "                ],\n",
     "            },\n",
@@ -1314,19 +1317,17 @@
     "                \"id\": \"exp_uncertainty\",\n",
     "                \"description\": \"experimental hydration free energy uncertainty\",\n",
     "                \"units\": \"kcal/mol\",\n",
-    "                \"type\": \"continuos\",\n",
-    "                \"names\":\n",
-    "                [\n",
+    "                \"type\": \"continuous\",\n",
+    "                \"names\": [\n",
     "                    \"hydration free energy uncertainty\",\n",
     "                ],\n",
     "            },\n",
     "            {\n",
-    "                \"id\": \"GAFF\", # name of the column in a tabular dataset\n",
-    "                \"description\": \"mobley group calculated value\", # description of what this column means\n",
-    "                \"units\": \"kcal/mol\", # units of the values in this column (leave empty if unitless)\n",
-    "                \"type\": \"continuous\", # can be \"categorical\", \"ordinal\", \"continuous\"\n",
-    "                \"names\": # names for the property (to sample from for building the prompts)\n",
-    "                [\n",
+    "                \"id\": \"GAFF\",  # name of the column in a tabular dataset\n",
+    "                \"description\": \"mobley group calculated value\",  # description of what this column means\n",
+    "                \"units\": \"kcal/mol\",  # units of the values in this column (leave empty if unitless)\n",
+    "                \"type\": \"continuous\",  # can be \"categorical\", \"ordinal\", \"continuous\"\n",
+    "                \"names\": [  # names for the property (to sample from for building the prompts)\n",
     "                    \"GAFF\",\n",
     "                    \"mobley group calculated value\",\n",
     "                ],\n",
@@ -1335,9 +1336,8 @@
     "                \"id\": \"calc_uncertainty\",\n",
     "                \"description\": \"mobley group calculated value calculated uncertainty\",\n",
     "                \"units\": \"kcal/mol\",\n",
-    "                \"type\": \"continuos\",\n",
-    "                \"names\":\n",
-    "                [\n",
+    "                \"type\": \"continuous\",\n",
+    "                \"names\": [\n",
     "                    \"GAFF uncertainty\",\n",
     "                    \"mobley group calculated value uncertainty\",\n",
     "                ],\n",
@@ -1345,9 +1345,9 @@
     "        ],\n",
     "        \"identifiers\": [\n",
     "            {\n",
-    "                \"id\": \"SMILES\", # column name \n",
-    "                \"type\": \"SMILES\", # can be \"SMILES\", \"SELFIES\", \"IUPAC\", \"OTHER\"\n",
-    "                \"description\": \"SMILES\", # description (optional, except for \"OTHER\")\n",
+    "                \"id\": \"SMILES\",  # column name\n",
+    "                \"type\": \"SMILES\",  # can be \"SMILES\", \"SELFIES\", \"IUPAC\", \"OTHER\"\n",
+    "                \"description\": \"SMILES\",  # description (optional, except for \"OTHER\")\n",
     "            },\n",
     "            {\n",
     "                \"id\": \"iupac_name\",\n",
@@ -1355,33 +1355,34 @@
     "                \"description\": \"IUPAC\",\n",
     "            },\n",
     "        ],\n",
-    "        \"license\": \"CC BY-NC-SA 4.0\", # license under which the original dataset was published\n",
-    "        \"links\": [ # list of relevant links (original dataset, other uses, etc.)\n",
+    "        \"license\": \"CC BY-NC-SA 4.0\",  # license under which the original dataset was published\n",
+    "        \"links\": [  # list of relevant links (original dataset, other uses, etc.)\n",
     "            \"https://github.com/MobleyLab/FreeSolv\",\n",
     "            \"https://escholarship.org/uc/item/6sd403pz\",\n",
     "        ],\n",
-    "        \"num_points\": len(df), # number of datapoints in this dataset\n",
+    "        \"num_points\": len(df),  # number of datapoints in this dataset\n",
     "        \"url\": \"https://github.com/MobleyLab/FreeSolv\",\n",
-    "        \"bibtex\":\n",
-    "        \"\"\"@article{mobley2013experimental,\n",
-    "        title={Experimental and calculated small molecule hydration free energies},\n",
-    "        author={Mobley, David L},\n",
-    "        year={2013}\"\"\"\n",
+    "        \"bibtex\": [\n",
+    "            \"\"\"@article{mobley2013experimental,\n",
+    "            title={Experimental and calculated small molecule hydration free energies},\n",
+    "            author={Mobley, David L},\n",
+    "            year={2013}\"\"\",\n",
+    "        ],\n",
     "    }\n",
     "    fn_meta = \"meta.yaml\"\n",
     "    with open(fn_meta, \"w\") as f:\n",
-    "        yaml.dump(meta, f)\n",
-    "        \n",
+    "        yaml.dump(meta, f, sort_keys=False)\n",
+    "\n",
     "    print(f\"Finished processing {meta['name']} dataset!\")\n",
     "\n",
     "\n",
-    "if __name__ == '__main__':\n",
+    "if __name__ == \"__main__\":\n",
     "    get_and_transform_data()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 106,
    "id": "d0474f26-70f3-4655-b81a-df4ada90e7a6",
    "metadata": {
     "tags": []
@@ -1408,7 +1409,7 @@
    },
    "outputs": [],
    "source": [
-    "ls - lh"
+    "ls -lh  # fmt: skip"
    ]
   },
   {
