feat: fix other id meta yaml

--- a/data/caco2_wang/example_processing_and_templates.ipynb
+++ b/data/caco2_wang/example_processing_and_templates.ipynb
@@ -103,23 +103,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "43873fc3-20a8-487d-a7c5-33bd58414159",
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "total 376\n",
-      "drwxr-xr-x@ 3 MMP  staff    96B 27 Feb 21:16 \u001b[34mdata\u001b[m\u001b[m/\n",
-      "-rw-r--r--  1 MMP  staff    77K 27 Feb 21:17 data_original.csv\n",
-      "-rw-r--r--  1 MMP  staff    51K 27 Feb 21:17 example_processing_and_templates.ipynb\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "!ls -lh"
    ]
@@ -483,20 +472,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "id": "63c8d4a4-906e-418d-be39-879365b4dfa0",
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "-rw-r--r--  1 MMP  staff    77K 27 Feb 21:19 data_clean.csv\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "!ls -lh {fn_data_csv}"
    ]
@@ -876,7 +857,7 @@
     "    \"identifiers\": [\n",
     "        {\n",
     "            \"id\": \"SMILES\",  # column name\n",
-    "            \"type\": \"SMILES\",  # can be \"SMILES\", \"SELFIES\", \"IUPAC\", \"OTHER\"\n",
+    "            \"type\": \"SMILES\",  # can be \"SMILES\", \"SELFIES\", \"IUPAC\", \"Other\"\n",
     "            \"description\": \"SMILES\",  # description (optional, except for \"OTHER\")\n",
     "        },\n",
     "        {\n",
@@ -934,20 +915,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": null,
    "id": "d01686c0-6746-4fc4-b019-350270dfc26f",
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "-rw-r--r--  1 MMP  staff   1,4K 27 Feb 21:26 meta.yaml\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "!ls -lh {fn_meta}"
    ]
