feat: fix name meta yaml

--- a/data/caco2_wang/example_processing_and_templates.ipynb
+++ b/data/caco2_wang/example_processing_and_templates.ipynb
@@ -830,7 +830,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 57,
    "id": "d3890961-444e-4a26-b8fc-ed8c4e959af9",
    "metadata": {
     "tags": []
@@ -858,12 +858,16 @@
     "        {\n",
     "            \"id\": \"SMILES\",  # column name\n",
     "            \"type\": \"SMILES\",  # can be \"SMILES\", \"SELFIES\", \"IUPAC\", \"Other\"\n",
-    "            \"description\": \"SMILES\",  # description (optional, except for \"OTHER\")\n",
+    "            \"description\": \"SMILES\",  # description (optional, except for \"Other\")\n",
     "        },\n",
     "        {\n",
     "            \"id\": \"compound_id\",\n",
-    "            \"type\": \"OTHER\",\n",
+    "            \"type\": \"Other\",\n",
     "            \"description\": \"Compound id / name\",\n",
+    "            \"names\": [\n",
+    "                \"compound id\",\n",
+    "                \"compound name\",\n",
+    "            ]\n",
     "        },\n",
     "    ],\n",
     "    \"license\": \"CC BY 4.0\",  # license under which the original dataset was published\n",
@@ -1003,7 +1007,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 55,
    "id": "8368bb20-8e1c-4b7d-b0e2-b39da36b5972",
    "metadata": {
     "tags": []
@@ -1086,8 +1090,12 @@
     "            },\n",
     "            {\n",
     "                \"id\": \"compound_id\",\n",
-    "                \"type\": \"OTHER\",\n",
+    "                \"type\": \"Other\",\n",
     "                \"description\": \"Compound id / name\",\n",
+    "                \"names\": [\n",
+    "                    \"compound id\",\n",
+    "                    \"compound name\",\n",
+    "                ],\n",
     "            },\n",
     "        ],\n",
     "        \"license\": \"CC BY 4.0\",  # license under which the original dataset was published\n",
