feat: fix black errors

--- a/data/caco2_wang/example_processing_and_templates.ipynb
+++ b/data/caco2_wang/example_processing_and_templates.ipynb
@@ -86,7 +86,7 @@
     }
    ],
    "source": [
-    "data = ADME(name = 'Caco2_Wang')"
+    "data = ADME(name=\"Caco2_Wang\")"
    ]
   },
   {
@@ -416,14 +416,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 67,
    "id": "7e746003-cb1f-434f-bba6-00f0c439c4ac",
    "metadata": {
     "tags": []
    },
    "outputs": [],
    "source": [
-    "df.compound_id = df.compound_id.str.strip()  # remove leading and trailing white space characters"
+    "df.compound_id = (\n",
+    "    df.compound_id.str.strip()\n",
+    ")  # remove leading and trailing white space characters"
    ]
   },
   {
@@ -867,7 +869,7 @@
     "            \"names\": [\n",
     "                \"compound id\",\n",
     "                \"compound name\",\n",
-    "            ]\n",
+    "            ],\n",
     "        },\n",
     "    ],\n",
     "    \"license\": \"CC BY 4.0\",  # license under which the original dataset was published\n",
@@ -1007,7 +1009,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 66,
    "id": "8368bb20-8e1c-4b7d-b0e2-b39da36b5972",
    "metadata": {
     "tags": []
@@ -1030,12 +1032,15 @@
     "\n",
     "def get_and_transform_data():\n",
     "    # get raw data\n",
-    "    data = ADME(name = 'Caco2_Wang')\n",
+    "    data = ADME(name=\"Caco2_Wang\")\n",
     "    fn_data_original = \"data_original.csv\"\n",
     "    data.get_data().to_csv(fn_data_original, index=False)\n",
     "\n",
     "    # create dataframe\n",
-    "    df = pd.read_csv(fn_data_original, delimiter=\",\")  # not necessary but ensure we can load the saved data\n",
+    "    df = pd.read_csv(\n",
+    "        fn_data_original,\n",
+    "        delimiter=\",\",\n",
+    "    )  # not necessary but ensure we can load the saved data\n",
     "\n",
     "    # check if fields are the same\n",
     "    fields_orig = df.columns.tolist()\n",
@@ -1057,7 +1062,7 @@
     "    df.compound_id = (\n",
     "        df.compound_id.str.strip()\n",
     "    )  # remove leading and trailing white space characters\n",
-    "    \n",
+    "\n",
     "    assert not df.duplicated().sum()\n",
     "\n",
     "    # save to csv\n",
