feat: fix isort

--- a/data/caco2_wang/example_processing_and_templates.ipynb
+++ b/data/caco2_wang/example_processing_and_templates.ipynb
@@ -33,9 +33,9 @@
    },
    "outputs": [],
    "source": [
-    "from tdc.single_pred import ADME\n",
     "import pandas as pd\n",
-    "import yaml"
+    "import yaml\n",
+    "from tdc.single_pred import ADME"
    ]
   },
   {
@@ -1009,7 +1009,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 68,
    "id": "8368bb20-8e1c-4b7d-b0e2-b39da36b5972",
    "metadata": {
     "tags": []
@@ -1025,9 +1025,9 @@
    ],
    "source": [
     "%%writefile $path_file\n",
-    "from tdc.single_pred import ADME\n",
     "import pandas as pd\n",
     "import yaml\n",
+    "from tdc.single_pred import ADME\n",
     "\n",
     "\n",
     "def get_and_transform_data():\n",
